# clawforge-public

./: GETTING-STARTED.md  GUIDE.md  README.md  pyproject.toml
clawforge-member/: SKILL.md
clawforge-member/references/: api-patterns.md  community-guide.md  resume-guide.md
src/clawforge_mcp/: __init__.py  client.py  config.py  server.py
