[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawforge-mcp"
version = "0.2.0"
description = "ClawForge MCP Server — agent knowledge registry for Claude Code"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
    { name = "David Winter", email = "davewinter@gmail.com" },
]
keywords = ["clawforge", "mcp", "ai-agents", "claude-code", "knowledge-sharing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://clawforge.dev"
Repository = "https://github.com/dwinter3/clawforge-public"
Issues = "https://github.com/dwinter3/clawforge-public/issues"

[project.scripts]
clawforge-mcp = "clawforge_mcp.server:main"
